--- a/DataCamp Software Engineering for Data Scientists in Python.ipynb
+++ b/DataCamp Software Engineering for Data Scientists in Python.ipynb
@@ -4835,7 +4835,7 @@
    "source": [
     "## Using doctest\n",
     "\n",
-    "We just learned about doctest, which, if you're writing full docstrings with examples, is a simple way to minimally test your functions. In this exercise, you'll get some hands-on practice testing and debugging with doctest.\n",
+    "We just learned about doctest, which, if you're writing full docstrings with examples, is a simple way to minimally test your functions. In this exercise, you'll get some hands-on practice testing and debugging with \"doctest\".\n",
     "\n",
     "The following have all be pre-loaded in your environment: doctest, Counter, and text_analyzer.\n",
     "\n",
@@ -4850,10 +4850,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "4bd1ad81-d54f-498f-b003-8272151c53da",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**********************************************************************\n",
+      "File \"__main__\", line 9, in __main__.sum_counters\n",
+      "Failed example:\n",
+      "    sum_counters([d1.word_counts, d2.word_counts])\n",
+      "Expected:\n",
+      "    15\n",
+      "Got:\n",
+      "    Counter({'fizz': 4, 'buzz': 2, '1': 1, '2': 1, '4': 1, '7': 1, '8': 1, '11': 1, '13': 1, '14': 1})\n",
+      "**********************************************************************\n",
+      "1 items had failures:\n",
+      "   1 of   3 in __main__.sum_counters\n",
+      "***Test Failed*** 1 failures.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=1, attempted=5)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def sum_counters(counters):\n",
     "    \"\"\"Aggregate collections.Counter objects by summing counts\n",
@@ -4861,39 +4890,128 @@
     "    :param counters: list/tuple of counters to sum\n",
     "    :return: aggregated counters with counts summed\n",
     "\n",
-    "    >>> d1 = text_analyzer.Document('1 2 fizz 4 buzz fizz 7 8')\n",
-    "    >>> d2 = text_analyzer.Document('fizz buzz 11 fizz 13 14')\n",
-    "    >>> ____([d1.word_counts, d2.word_counts])\n",
-    "    ____\n",
+    "    >>> d1 = Document('1 2 fizz 4 buzz fizz 7 8')\n",
+    "    >>> d2 = Document('fizz buzz 11 fizz 13 14')\n",
+    "    >>> sum_counters([d1.word_counts, d2.word_counts])\n",
+    "    15\n",
     "    \"\"\"\n",
     "    return sum(counters, Counter())\n",
     "\n",
-    "____"
+    "\n",
+    "# *******************************************************************************************************************\n",
+    "# *******************************************************************************************************************\n",
+    "\n",
+    "import doctest\n",
+    "doctest.testmod()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e52abcdd-e8c4-4877-8eda-84d23781d83a",
+   "metadata": {},
+   "source": [
+    "# Cause I did not think about it, just lazily guessed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "70a3c5bd-a6ed-40c0-a94d-70abf76c2318",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**********************************************************************\n",
+      "File \"__main__\", line 9, in __main__.sum_counters\n",
+      "Failed example:\n",
+      "    sum_counters([d1.word_counts, d2.word_counts])\n",
+      "Expected:\n",
+      "    Counter({'fizz': 4, 'buzz': 2})\n",
+      "Got:\n",
+      "    Counter({'fizz': 4, 'buzz': 2, '1': 1, '2': 1, '4': 1, '7': 1, '8': 1, '11': 1, '13': 1, '14': 1})\n",
+      "**********************************************************************\n",
+      "1 items had failures:\n",
+      "   1 of   3 in __main__.sum_counters\n",
+      "***Test Failed*** 1 failures.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=1, attempted=5)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sum_counters(counters):\n",
+    "    \"\"\"Aggregate collections.Counter objects by summing counts\n",
+    "\n",
+    "    :param counters: list/tuple of counters to sum\n",
+    "    :return: aggregated counters with counts summed\n",
+    "\n",
+    "    >>> d1 = Document('1 2 fizz 4 buzz fizz 7 8')\n",
+    "    >>> d2 = Document('fizz buzz 11 fizz 13 14')\n",
+    "    >>> sum_counters([d1.word_counts, d2.word_counts])\n",
+    "    Counter({'fizz': 4, 'buzz': 2})\n",
+    "    \"\"\"\n",
+    "    return sum(counters, Counter())\n",
+    "\n",
+    "\n",
+    "# *******************************************************************************************************************\n",
+    "# *******************************************************************************************************************\n",
+    "\n",
+    "\n",
+    "doctest.testmod()"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8293842a-14a6-4b8e-8eec-3166262af816",
+   "cell_type": "markdown",
+   "id": "2e840d6c-d63b-43ff-90e9-2c5453e09049",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Now, its time to regret using str.split to do the tokenization, \n",
+    "# cause it will split everything in the string, not just words\n",
+    "\n",
+    "\n",
+    "# Think about it, can we make it back to the right way? \n"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7bd657b6-c42e-446e-9d70-e3713dddcaca",
+   "cell_type": "markdown",
+   "id": "6e72d651-daac-48bd-95d4-8a7825c81719",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Using pytest\n",
+    "\n",
+    "doctest is a great tool, but it's not nearly as powerful as \"pytest\". In this exercise, you'll write tests for your \"SocialMedia\" class using the pytest framework.\n",
+    "Instructions 1/2\n",
+    "50 XP\n",
+    "\n",
+    "    1\n",
+    "    2\n",
+    "\n",
+    "Question\n",
+    "\n",
+    "Before you start writing tests, you need to be working in an appropriately named file for pytest to find your test. Which of the following would be the best, valid name for file containing tests for the SocialMedia class?\n",
+    "Possible Answers\n",
+    "\n",
+    "#    test_social_media.py\n",
+    "    pytest_social_media.py\n",
+    "    social_media_tests.py\n",
+    "    test_sm.py\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    import the SocialMedia class.\n",
+    "    Complete the name of the test function so it is run by pytest.\n",
+    "    Use the appropriate keyword"
+   ]
   },
   {
    "cell_type": "code",
@@ -4901,7 +5019,19 @@
    "id": "bafae1eb-dabd-4c30-9c32-162afcf86544",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from collections import Counter\n",
+    "#from text_analyzer import SocialMedia\n",
+    "\n",
+    "# Create an instance of SocialMedia for testing\n",
+    "test_post = 'learning #python & #rstats is awesome! thanks @datacamp!'\n",
+    "sm_post = SocialMedia(test_post)\n",
+    "\n",
+    "# Test hashtag counts are created properly\n",
+    "def test_social_media_hashtags():\n",
+    "    expected_hashtag_counts = Counter({'#python': 1, '#rstats': 1})\n",
+    "    assert sm_post.hashtag_counts == expected_hashtag_counts\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -4909,15 +5039,115 @@
    "id": "4397402c-1a64-4177-9663-1b096c46b80e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Why is this, the institor suggested command was just pytest followed by the path\n",
+    "\n",
+    "                                                                    #######################################\n",
+    "(datacmap_data_engineering) jhu@debian:~/datacmap_data_engineering$ python -m pytest tests/test_document.py\n",
+    "============================= test session starts ==============================\n",
+    "platform linux -- Python 3.9.2, pytest-7.0.0, pluggy-1.0.0\n",
+    "rootdir: /home/jhu/datacmap_data_engineering\n",
+    "collected 2 items                                                              \n",
+    "\n",
+    "tests/test_document.py ..                                                [100%]\n",
+    "\n",
+    "============================== 2 passed in 1.22s ===============================\n",
+    "(datacmap_data_engineering) jhu@debian:~/datacmap_data_engineering$ python -m pytest tests/test_social_media.py \n",
+    "============================= test session starts ==============================\n",
+    "platform linux -- Python 3.9.2, pytest-7.0.0, pluggy-1.0.0\n",
+    "rootdir: /home/jhu/datacmap_data_engineering\n",
+    "collected 1 item                                                               \n",
+    "\n",
+    "tests/test_social_media.py .                                             [100%]\n",
+    "\n",
+    "============================== 1 passed in 1.24s ===============================\n",
+    "(datacmap_data_engineering) jhu@debian:~/datacmap_data_engineering$ \n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0f9fe885-c8ee-461d-ab7a-9164105ded01",
+   "execution_count": 40,
+   "id": "0acd2408-98b0-42bb-92e7-d8d36eec2075",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "learning #python & #rstats is awesome! thanks @datacamp!\n",
+      "Counter({'#python': 1, '#rstats': 1})\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#from text_analyzer import Document\n",
+    "from collections import Counter\n",
+    "\n",
+    "\n",
+    "# Define a SocialMedia class that is a child of the `Document class`\n",
+    "class SocialMedia(Document):\n",
+    "    def __init__(self, text):\n",
+    "        Document.__init__(self, text)\n",
+    "        self.hashtag_counts = self._count_hashtags()\n",
+    "        self.mention_counts = self._count_mentions()\n",
+    "\n",
+    "    def _count_hashtags(self):\n",
+    "        # Filter attribute so only words starting with '#' remain\n",
+    "        return SocialMedia.filter_word_counts(self.word_counts, first_char='#')  ###########################################\n",
+    "\n",
+    "    def _count_mentions(self):\n",
+    "        # Filter attribute so only words starting with '@' remain\n",
+    "        return SocialMedia.filter_word_counts(self.word_counts, first_char='@')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "test_post = 'learning #python & #rstats is awesome! thanks @datacamp!'\n",
+    "sm_post = SocialMedia(test_post)\n",
+    "print(sm_post.text)\n",
+    "print(sm_post.hashtag_counts)\n",
+    "\n",
+    "expected_hashtag_counts = Counter({'#python': 1, '#rstats': 1})\n",
+    "\n",
+    "print(sm_post.hashtag_counts == expected_hashtag_counts)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8626a7e-b8f3-49cf-91b0-9fa19c6e7951",
+   "metadata": {},
+   "source": [
+    "## Documentation & testing in practice\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "**Our last step is to look at documentation and testing in the wild.  We'll cover some useful tools and their benefits.  We won't go into detail on how to implement everything, but there is a lot of good documentation online for the tools that we'll cover.  Also these tools won't be available in the course exercise for practice.  \n",
+    "\n",
+    "\n",
+    "The \"sphinx\" was mentioned earlier (??) as a tool that tranforms docstrings into beautiful documentation.  Here we can see an example of what your Document class might look like as an HTML page generated by Sphinx.  \n",
+    "\n",
+    "\n",
+    "All of this benefit just from writing complex docstrings.  If you managing your project with GitHub or GitLab then you can even host your Sphinx-built documentation for free using the products' services.  That way users can search the web to find your helpful documentation.  \n",
+    "\n",
+    "You might have noticed that the example Sphinx page showed documentation for a class and included information on attributes.  Lets take a quick aside to look at the docstring that was used to build the page.  This docstring should look mostly familiar, but here are a couple of things to note.  \n",
+    "\n",
+    "\n",
+    "# *******************************************************************************************************************\n",
+    "We document the parameters for the init method in the class docstring.  This way users can see how to initialize a new instance by calling help on the class itself.  Next we document attributes using the 'ivar' keyword.  This abbreviation stands for 'instance variable'.  With this documentation in place, users can easily see how to use your class.  By using pytest extensively you'll be able to have most, if not all, of your projects code being tested, but it can be a bit of a bother to have to always run the tests repeatedly from the command line.  \n",
+    "\n",
+    "This is where tools like Travis CI come in.  The CI stands for Continuous Integration, and it just mean that you are continully adding new code to your project.  When adding this new code, Travis can automatically run your tests for you and alert you if your changes broke something.  Then when you push a fix, Travis CI will run your tests again to double check that you fix was successful. \n",
+    "\n",
+    "Another great aspect of Travis CI and other CI testing tools is scheduled builds.  By \n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -4925,7 +5155,19 @@
    "id": "ac7536c8-1db9-4474-9247-e91670a685ff",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Document:\n",
+    "    \"\"\"A class for text analysis\n",
+    "\n",
+    "    :param text: string of text to be analyzed\n",
+    "    \n",
+    "    :ivar text: string of text to be analyzed; set by `text` parameter\n",
+    "    :ivar tokens: Parsed list of words from text\n",
+    "    :ivar word_counts: Counter containing counts of hashtags used in text\n",
+    "    \"\"\"\n",
+    "    # Method to create a new instance of MyClass\n",
+    "    def __init__(self, text):\n"
+   ]
   },
   {
    "cell_type": "code",
