--- a/DataCamp Software Engineering for Data Scientists in Python.ipynb
+++ b/DataCamp Software Engineering for Data Scientists in Python.ipynb
@@ -5139,12 +5139,19 @@
     "\n",
     "\n",
     "# *******************************************************************************************************************\n",
+    "# *******************************************************************************************************************\n",
     "We document the parameters for the init method in the class docstring.  This way users can see how to initialize a new instance by calling help on the class itself.  Next we document attributes using the 'ivar' keyword.  This abbreviation stands for 'instance variable'.  With this documentation in place, users can easily see how to use your class.  By using pytest extensively you'll be able to have most, if not all, of your projects code being tested, but it can be a bit of a bother to have to always run the tests repeatedly from the command line.  \n",
     "\n",
     "This is where tools like Travis CI come in.  The CI stands for Continuous Integration, and it just mean that you are continully adding new code to your project.  When adding this new code, Travis can automatically run your tests for you and alert you if your changes broke something.  Then when you push a fix, Travis CI will run your tests again to double check that you fix was successful. \n",
     "\n",
-    "Another great aspect of Travis CI and other CI testing tools is scheduled builds.  By \n",
+    "Another great aspect of Travis CI and other CI testing tools is scheduled builds.  By scheduling a build your tests can be run periodically even without you adding new code.  Scheduled test are great way to catch bugs introduced by updates in one of your dependencies.  \n",
     "\n",
+    "\n",
+    "# *******************************************************************************************************************\n",
+    "To close up, ltes list out some links for the tools we've covered and some additional ones.  First, here are links to the tools we just covered.  (Google Sphinx, Travis CI, GitHub and GitLab, Codcov, Code Climate).  Next, GitHub and GitLab are great for storing open source projects.  They are based on the tool \"Git\".  To learn more about Git, you can check out the related DataCamp course (Better be, cause Google does not always take you to the most valuable places, especially for you, with only few words to clearly explaining the thing crystal. Life is short, day's 24 hours, flash are easily getting tired, but DataCamp is not your life saver).  Codcov is a tool that lets you explore which parts of your code are being tested by your automatic tests; this is know as test coverage.  By keeping your project's test coverage high you will be less prone to suprise bugs.  Code Climate is a tool that will analyze your code's readability.  It can point out when a function is getting too long or even your code is a little confusing in sport.  Fixing the issues is points out, will help your project more maintainable.  Both Codecov and Code Climate can be integrated with Travis CI to run automaticallyon a schedule and with each addition of new code.  \n",
+    "\n",
+    "\n",
+    "We've just learned about some amazingly helpful tools for Software Engineering with Python.  \n",
     "\n",
     "\n"
    ]
@@ -5170,9 +5177,141 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "859cde83-70be-4c1c-ac57-5516eeb6c455",
+   "metadata": {},
+   "source": [
+    "## Documenting classes for Sphinx\n",
+    "\n",
+    "sphinx is a great tool for rendering documentation as HTML. In this exercise, you'll write a docstring for a class that can be taken advantage of by sphinx.\n",
+    "\n",
+    "Note that your docstring submission must match the solution exactly. If you find yourself getting it wrong several times, it may be a good idea to refresh the sample code and start over.\n",
+    "Instructions\n",
+    "100 XP\n",
+    "\n",
+    "    import the Document class from the text_analyzer package for use in the class definition.\n",
+    "    Complete the line of the docstring dealing with the parameters of the __init__ method.\n",
+    "    Complete the docstring by filling out the documentation for the attributes or 'instance variables' of the SocialMedia class.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b192d9a-448a-4f80-8c37-3b5186de49cd",
+   "id": "308839db-e304-487e-b28a-45ab54f97524",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from text_analyzer import Document\n",
+    "\n",
+    "\n",
+    "class SocialMedia(Document):\n",
+    "    \"\"\"Analyze text data from social media\n",
+    "    \n",
+    "    :param text: social media text to analyze\n",
+    "\n",
+    "    :ivar hashtag_counts: Counter object containing counts of hashtags used in text\n",
+    "    :ivar mention_counts: Counter object containing counts of @mentions used in text\n",
+    "    \"\"\"\n",
+    "    def __init__(self, text):\n",
+    "        Document.__init__(self, text)\n",
+    "        self.hashtag_counts = self._count_hashtags()\n",
+    "        self.mention_counts = self._count_mentions()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "300821d9-a278-4896-b127-6935144a187f",
+   "metadata": {},
+   "source": [
+    "## Identifying tools\n",
+    "\n",
+    "Which of following lists of tools best corresponds to the 3 software engineering concepts of Modularity, Documentation, & Automated Testing. The correct answer will have the tools listed in the order that best corresponds to which concept they help you with.\n",
+    "\n",
+    "After this exercise you will be nearly done with the course! If you enjoyed it, feel free to send Adam a thank you via Twitter - he'll appreciate it! Tweet to Adam\n",
+    "Answer the question\n",
+    "50XP\n",
+    "Possible Answers\n",
+    "\n",
+    "    Docstrings, Travis CI, & Python\n",
+    "    press\n",
+    "    1\n",
+    "    Pytest, Codecov, & Sphinx\n",
+    "    press\n",
+    "    2\n",
+    "    GitHub, GitLab, & Git\n",
+    "    press\n",
+    "    3\n",
+    "#    Code Climate, Sphinx, & Travis CI\n",
+    "    press\n",
+    "    4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b4a33f2-ecb4-496d-b8cc-d9378dbb5ee2",
+   "metadata": {},
+   "source": [
+    "## Final Thoughts\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "**Congratulations on completing the course.  You've come a long way.  Throughout the course, we explored the ideas related to the major concepts of modularity, documentation, and automated testing.  \n",
+    "\n",
+    "With modularity we learned about things such as functions, classes, packages, and DRY principle.  We learned how docstrings, comments, and Sphinx can help document a project.  And we learned how to pytest, doctest, and Travis CI can be used to help implement automated testing.  \n",
+    "\n",
+    "Hopefully, you'll agree with me that applying these concepts in your data science workflow will lead to much more maintainable code.  Following these ideas will even help you in publishing your own open source tools for data science that your users will love.  Thanks for coming along with me as we learned about Software Engineering for Data Science in Python.  I hope you learned a lot.  Good luck in your future Software Engineering projects.  \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe00cb2a-245f-4185-ac26-b21c0e7806fd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84600209-08a3-4594-8d84-3433e518fe93",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba9a3dd8-f347-4f6f-8009-924ec9c0610e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db9f37f0-8023-479b-9570-0bcdcd45cd2f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e53334b9-b0d0-4471-9f36-ebb360bd1ff7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b82cf8ff-190c-41d7-a498-98913e33fd89",
    "metadata": {},
    "outputs": [],
    "source": []
